genext2fs (1.4.1-3) UNRELEASED; urgency=low

  * New maintainer (closes: 579369).
  * Packaging cleanup:
    - update autotools dependencies; 

 -- Jérémie Koenig <jk@jk.fr.eu.org>  Sat, 03 Sep 2011 05:53:42 +0200

genext2fs (1.4.1-2.2) unstable; urgency=low

  * Non-maintainer upload.
  * Build depend on automake instead of automake1.4. (Closes: #549097).
  * Version GPL version in debian/copyright.
  * Bump Standards Version to 3.8.3.

 -- Barry deFreese <bdefreese@debian.org>  Wed, 30 Sep 2009 14:49:16 -0400

genext2fs (1.4.1-2.1) unstable; urgency=low

  * Non-Maintainer Upload, at BSP in Zurich
  * in sscanf the "a" could mean "malloc" or the new C99 floating,
    so don't use it, not to have surprises.

 -- Giacomo Catenazzi <cate@debian.org>  Sat, 12 Jan 2008 23:03:59 +0100

genext2fs (1.4.1-2) unstable; urgency=low

  * configure.in: Change AC_CONFIG_HEADER to AM_CONFIG_HEADER.

 -- Franz Pletz <fpletz@franz-pletz.org>  Sun, 29 Jul 2007 19:13:04 +0200

genext2fs (1.4.1-1) unstable; urgency=low

  * New upstream release. (Closes: #406078)
  * clean.sh: updated.
  * Switch to debhelper 5.

 -- Franz Pletz <fpletz@franz-pletz.org>  Sun, 29 Jul 2007 19:10:18 +0200

genext2fs (1.4-rc1-2.1) unstable; urgency=low

  * Non-maintainer upload.
  * FTBFS: Cannot satisfy Build-Depends on automake (Closes: #395150)

 -- Neil Williams <codehelp@debian.org>  Fri, 27 Oct 2006 19:08:55 +0100

genext2fs (1.4-rc1-2) unstable; urgency=low

  * Fixed description (Closes: #371083)

 -- Franz Pletz <fpletz@franz-pletz.org>  Mon, 26 Jun 2006 10:50:19 +0200

genext2fs (1.4-rc1-1) unstable; urgency=low

  * New upstream release, removed cvs blurb from diff.
  * debian/control:
    - New Maintainer. (Closes: #369191)
    - Tweaked Description.
    - Bumped Standards-Version to 3.7.2, no further changes necessary.
  * Updated debian/changelog.
  * debian/rules:
    - Moved debhelper compatibility level setting to debian/compat.
    - Miscellaneous minor cleanups.