@@ -2,13 +2,13 @@ Source: genext2fs
 Section: admin
 Priority: optional
 Maintainer: Jérémie Koenig <jk@jk.fr.eu.org>
-Build-Depends: debhelper (>> 5), autoconf (>= 2.59), automake (>= 1.10)
+Build-Depends: debhelper (>> 8), autoconf (>= 2.59), automake (>= 1.10)
 Build-Conflicts: autoconf2.13
 Standards-Version: 3.8.3
 
 Package: genext2fs
 Architecture: any
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: ext2 filesystem generator for embedded systems
  genext2fs is meant to generate an ext2 filesystem  as a normal
  (non-root) user. It doesn't require you to mount the image file
