@@ -1,63 +1,18 @@
 #!/usr/bin/make -f
-# Sample debian/rules that uses debhelper.
-# GNU copyright 1997 to 1999 by Joey Hess.
 
-# Uncomment this to turn on verbose mode.
-#export DH_VERBOSE=1
+%:
+	dh $@
 
-configure: configure-stamp
-configure-stamp:
-	dh_testdir
+# Make sure we always regenerate the autoconf files
 
-	chmod +x autogen.sh
-	./autogen.sh
-	./configure --prefix=/usr --mandir=/usr/share/man/
+autocruft = Makefile.in aclocal.m4 config.h.in configure depcomp \
+		install-sh missing
 
-	touch configure-stamp
+override_dh_auto_configure:
+	$(RM) $(autocruft)
+	autoreconf -i
+	dh_auto_configure
 
-build: configure-stamp build-stamp
-build-stamp:
-	dh_testdir
-
-	$(MAKE)
-	$(MAKE) check
-
-	touch build-stamp
-
-clean:
-	dh_testdir
-	dh_testroot
-	rm -f build-stamp configure-stamp
-
-	chmod +x clean.sh
-	./clean.sh
-
-	dh_clean
-
-install: build
-	dh_testdir
-	dh_testroot
-	dh_clean -k
-	dh_installdirs
-
-	$(MAKE) install DESTDIR=`pwd`/debian/genext2fs
-
-
-binary-indep: build install
-binary-arch: build install
-	dh_testdir
-	dh_testroot
-	dh_installdocs
-	dh_installchangelogs 
-	dh_link
-	dh_strip
-	dh_compress
-	dh_fixperms
-	dh_installdeb
-	dh_shlibdeps
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
-
-binary: binary-indep binary-arch
-.PHONY: build clean binary-indep binary-arch binary install configure
+override_dh_auto_clean:
+	dh_auto_clean
+	$(RM) $(autocruft)
