@@ -3,8 +3,9 @@ genext2fs (1.4.1-3) UNRELEASED; urgency=low
   * New maintainer (closes: 579369).
   * Packaging cleanup:
     - update autotools dependencies; 
+    - update to debhelper 8;
 
- -- Jérémie Koenig <jk@jk.fr.eu.org>  Sat, 03 Sep 2011 05:53:42 +0200
+ -- Jérémie Koenig <jk@jk.fr.eu.org>  Sat, 03 Sep 2011 05:54:53 +0200
 
 genext2fs (1.4.1-2.2) unstable; urgency=low
 
